--- a/styles/productDetails.module.css
+++ b/styles/productDetails.module.css
@@ -1,6 +1,6 @@
 .body{
     /* width: 700px; */
-    background-color: aliceblue;
+    background-color: #f5faff;
     padding: 10px;
     justify-content: center;
     
