--- a/styles/card.module.css
+++ b/styles/card.module.css
@@ -73,6 +73,6 @@ margin: 0;
       padding: 10px;
   gap: 2rem;
   align-items: center;
-    
+    color: #fff;
 font-family: "Roboto", sans-serif;
 }
