--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -28,6 +28,7 @@
   height: 40px;
   font-family: "Roboto", sans-serif;
   background-color: #428bca;
+  color: #ffff;
   border: none;
   border-radius: 10px;
   font-size: 1rem;  
