--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -31,19 +31,17 @@
   color: #ffff;
   border: none;
   border-radius: 10px;
-  font-size: 1rem;  
+  font-size: 1rem;
   transition: 0.5s;
 }
-.content button:hover{
-
-background-color: #ffffff;
-border: 1px solid gray;
-color:black
+.content button:hover {
+  background-color: #ffffff;
+  border: 1px solid gray;
+  color: black;
 }
 
-
-@media screen and (max-width:900px) { 
-  .text{
+@media screen and (max-width: 900px) {
+  .text {
     margin-left: 10px;
     position: absolute;
     z-index: 10;
@@ -54,13 +52,16 @@ color:black
     text-shadow: 1px 1px 2px black;
   }
   .content h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 900;
-    text-shadow: 1px 1px 2px black;
+    text-shadow: 2px 1px 2px black;
   }
   .content h3 {
-    font-size: 3rem;
-    text-shadow: 1px 1px 2px black;
+    font-size: 2rem;
+    text-shadow: 2px 1px 2px black;
   }
+}
 
+.image {
+  object-fit: cover;
 }
